RESOLVED FIXED156038
-webkit-text-underline-position: under; does not work in ToT
https://bugs.webkit.org/show_bug.cgi?id=156038
Summary -webkit-text-underline-position: under; does not work in ToT
Sam Weinig
Reported 2016-03-30 13:11:51 PDT
-webkit-text-underline-position: under; does not work in ToT
Attachments
Patch (4.94 KB, patch)
2016-03-30 13:14 PDT, Sam Weinig
hyatt: review+
Sam Weinig
Comment 1 2016-03-30 13:14:39 PDT
Dave Hyatt
Comment 2 2016-03-30 13:21:06 PDT
Comment on attachment 275216 [details] Patch r=me, fix up the tags in the tests though.
Sam Weinig
Comment 3 2016-03-30 15:07:17 PDT
Note You need to log in before you can comment on or make changes to this bug.