-webkit-text-underline-position: under; does not work in ToT https://bugs.webkit.org/show_bug.cgi?id=156038

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/css3-text/css3-text-decoration/text-underline-position/text-underline-position-under-vs-alphabetic.html

* style/InlineTextBoxStyle.cpp:
(WebCore::computeUnderlineOffset):
Only resolve the underline position when based on the InlineTextBox when it is specified as auto.

LayoutTests:

* fast/css3-text/css3-text-decoration/text-underline-position/text-underline-position-under-vs-alphabetic-expected-mismatch.html: Added.
* fast/css3-text/css3-text-decoration/text-underline-position/text-underline-position-under-vs-alphabetic.html: Added.
Add mismatch test to show that -webkit-text-underline-position: under works.



Canonical link: https://commits.webkit.org/174156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198858 268f45cc-cd09-0410-ab3c-d52691b4dbfc